- Implemented running one stage until velocity is consumed or no more work can be pulled from the ready work provider. - Implemented running a single day (run each stage serially).

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -19,7 +19,9 @@ src_files:
     - public/javascripts/ext/backbone.js
     - public/javascripts/ext/icanhaz.js
     - public/javascripts/app/WorkItem.js
-    - public/javascripts/**/*.js
+    - public/javascripts/app/ReadyWorkProvider.js
+    - public/javascripts/app/Backlog.js
+    - public/javascripts/app/Stage.js
 
 # stylesheets
 #
